[package]
name = "graham"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.13.2", features = ["json"] }
rss = "2"
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
