[package]
name = "graham"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3"
crossterm = "0.28"
dirs = "6.0.0"
ratatui = "0.29"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
rss = "2"
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
